// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wizard Component should allow modifying specific and custom props: isForm 1`] = `
DOMTokenList {
  "0": "pf-v5-c-wizard",
  "1": "quipucords-wizard",
  "2": "quipucords-wizard__hide-nav-last",
}
`;

exports[`Wizard Component should allow modifying specific and custom props: isNavHidden 1`] = `
DOMTokenList {
  "0": "pf-v5-c-wizard",
  "1": "quipucords-wizard",
  "2": "quipucords-wizard__hide-nav",
}
`;

exports[`Wizard Component should render a basic component: basic 1`] = `
<screen>
  <div
    class="quipucords-modal quipucords-modal__rcue-width quipucords-modal__wizard pf-v5-c-backdrop__open"
  >
    <div>
      <div
        class="pf-v5-c-backdrop"
      >
        <div
          class="pf-v5-l-bullseye"
        >
          <div
            aria-label="t(modal.aria-label-default)"
            aria-labelledby="pf-modal-part-0"
            aria-modal="true"
            class="pf-v5-c-modal-box pf-m-align-top"
            data-ouia-component-id="OUIA-Generated-Modal-1"
            data-ouia-component-type="PF5/ModalContent"
            data-ouia-safe="true"
            id="pf-modal-part-0"
            role="dialog"
            style="--pf-v5-c-modal-box--m-align-top--spacer: 5%;"
          >
            <div
              class="pf-v5-c-wizard quipucords-wizard"
            >
              <button
                aria-expanded="false"
                aria-label="Wizard Toggle"
                class="pf-v5-c-wizard__toggle"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-list-item"
                  >
                    <span
                      class="pf-v5-c-wizard__toggle-num"
                    >
                       1 
                    </span>
                     Lorem 
                  </span>
                </span>
                <span
                  class="pf-v5-c-wizard__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
              <div
                class="pf-v5-c-wizard__outer-wrap"
              >
                <div
                  class="pf-v5-c-wizard__inner-wrap"
                >
                  <nav
                    class="pf-v5-c-wizard__nav"
                    data-ouia-component-id="OUIA-Generated-WizardNav-1"
                    data-ouia-component-type="PF5/WizardNav"
                    data-ouia-safe="true"
                  >
                    <ol
                      class="pf-v5-c-wizard__nav-list"
                      role="list"
                    >
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="step"
                          class="pf-v5-c-wizard__nav-link pf-m-current"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-1"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          id="1"
                          type="button"
                        >
                           Lorem 
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          class="pf-v5-c-wizard__nav-link"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-2"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          id="2"
                          type="button"
                        >
                           Ipsum 
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          class="pf-v5-c-wizard__nav-link"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-3"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          id="3"
                          type="button"
                        >
                           Dolor 
                        </button>
                      </li>
                    </ol>
                  </nav>
                  <div
                    class="pf-v5-c-wizard__main"
                  >
                    <div
                      class="pf-v5-c-wizard__main-body"
                    >
                       lorem 
                    </div>
                  </div>
                </div>
                <footer
                  class="pf-v5-c-wizard__footer"
                >
                  <button
                    aria-disabled="true"
                    class="pf-v5-c-button pf-m-secondary pf-m-disabled"
                    data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                     Back 
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-1"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="submit"
                  >
                     Next 
                  </button>
                  <div
                    class="pf-v5-c-wizard__footer-cancel"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-link"
                      data-ouia-component-id="OUIA-Generated-Button-link-1"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                       Cancel 
                    </button>
                  </div>
                </footer>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</screen>
`;
